fix pop up, radius, overflow

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  background-image: url("../assets/popup/background.png");
+  background-image: url('../assets/popup/background.png');
   background-position: center;
   background-size: cover;
 }
 
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -718,27 +718,10 @@ h3 {
   margin: 0 25px;
 }
 
-.total .detail .sub-2 {
-  text-align: right;
-}
-
-.detail .sub-1,
-.detail .sub-2 {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.detail .sub-1 p {
+.total .row p {
   font-size: 14px;
   font-weight: 400;
   color: #818487;
-}
-
-.detail .sub-2 p {
-  font-size: 18px;
-  font-weight: 400;
-  color: #343537;
 }
 
 .total .desc {
@@ -882,6 +865,15 @@ h3 {
 }
 
 @media screen and (max-width: 500px) {
+  body {
+    width: max-content;
+  }
+
+  .container {
+    overflow-x: hidden;
+    padding-left: 5px;
+  }
+
   .header,
   .basic,
   .wow,
@@ -889,10 +881,12 @@ h3 {
   .performance,
   .total {
     width: 350px;
+    border-radius: 16px;
   }
 
   .header {
-    height: 200px;
+    height: 180px;
+    margin-top: 25px;
   }
 
   .Ellipse13,
@@ -964,6 +958,7 @@ h3 {
 
   .ornament1 {
     width: 100px;
+    border-top-left-radius: 16px;
   }
 
   .ornament2 {
@@ -980,20 +975,23 @@ h3 {
 
   .wow .ornament2 {
     left: 90.5%;
-    top: -47px;
-    transform: rotate(-65deg);
+    top: -52px;
+    transform: rotate(-70deg);
   }
 
   .sales-puddle-img {
     width: 100px;
   }
 
-  .sales-dashed-img,
   .sales-circle-img {
     top: unset;
-    bottom: -50px;
+    bottom: -60px;
     right: 0;
-    transform: rotate(70deg);
+    transform: rotate(75deg);
+  }
+
+  .sales-dashed-img {
+    display: none;
   }
 
   .total-solid-img {
@@ -1003,6 +1001,7 @@ h3 {
 
   .total-circle-img {
     width: 70px;
+    z-index: -2;
   }
 
   .performance-puddle-img {
@@ -1048,6 +1047,10 @@ h3 {
     text-align: center;
   }
 
+  .total .row p {
+    font-size: 12px;
+  }
+
   .total-commission {
     flex-direction: column;
     justify-content: center;
@@ -1074,6 +1077,10 @@ h3 {
     transform: rotate(25deg);
   }
 
+  .total .desc svg {
+    width: 40px !important;
+  }
+
   .detail .sub-1 {
     text-align: start;
   }
@@ -1083,18 +1090,13 @@ h3 {
   }
 
   .card {
-    background-color: white;
-    border-radius: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 230px;
+    border-radius: 18px;
+    margin-top: 150px;
     margin-bottom: 160px;
-    width: 300px;
-    height: 300px;
+    width: 290px;
+    height: 280px;
     animation-name: fadeIn;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     position: relative;
   }
 
@@ -1114,6 +1116,8 @@ h3 {
   .pop {
     backdrop-filter: blur(0);
     backdrop-filter: brightness(30%);
+    width: 100%;
+    overflow-x: hidden;
   }
 
   .bg-card-top {
@@ -1165,9 +1169,5 @@ h3 {
     border: none;
     margin-top: 15px;
     margin-bottom: 15px;
-  }
-
-  .total .desc svg {
-    width: 40px !important;
   }
 }
